Update deprecated bangs

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -452,7 +452,7 @@ W=(#InfoWidth# - [meterMode:W] - #SidePadding#)
 H=29
 SolidColor=#ClickableTransparentColor#
 AntiAlias=1
-LeftMouseUpAction=!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]
+LeftMouseUpAction=[!CommandMeasure measureInput "ExecuteBatch 1"]
 ToolTipTitle=Actions
 
 [measureLightMode]
