--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -178,7 +178,7 @@ Group=TextGroup | TextBoxGroup
 [meterClickLightHighlight]
 Meter=Image
 MeterStyle=styleClick
-LeftMouseUpAction=!Execute [!RainmeterPluginBang "measureInputLightHighlight ExecuteBatch 1"]
+LeftMouseUpAction=[!CommandMeasure measureInputLightHighlight "ExecuteBatch 1"]
 
 [meterLabelDarkHighlight]
 Meter=String
@@ -202,7 +202,7 @@ Group=TextGroup | TextBoxGroup
 [meterClickDarkHighlight]
 Meter=Image
 MeterStyle=styleClick
-LeftMouseUpAction=!Execute [!RainmeterPluginBang "measureInputDarkHighlight ExecuteBatch 1"]
+LeftMouseUpAction=[!CommandMeasure measureInputDarkHighlight "ExecuteBatch 1"]
 
 [meterLabelIcons]
 Meter=String
