--- a/Time/Digital/Digital.ini
+++ b/Time/Digital/Digital.ini
@@ -99,11 +99,11 @@ Group=TextGroup | TextBoxGroup
 Measure=String
 String=Minutes
 IfMatch=Seconds
-IfMatchAction=[!SetOption meterTextBoxBackground LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""][!UpdateMeter meterTextBoxBackground]
+IfMatchAction=[!SetOption meterTextBoxBackground LeftMouseUpAction """[!CommandMeasure measureInput "ExecuteBatch 1"]"""][!UpdateMeter meterTextBoxBackground]
 IfMatch2=Minutes
-IfMatchAction2=[!SetOption meterTextBoxBackground LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 2"]"""][!UpdateMeter meterTextBoxBackground]
+IfMatchAction2=[!SetOption meterTextBoxBackground LeftMouseUpAction """[!CommandMeasure measureInput "ExecuteBatch 2"]"""][!UpdateMeter meterTextBoxBackground]
 IfMatch3=Hours
-IfMatchAction3=[!SetOption meterTextBoxBackground LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 3"]"""][!UpdateMeter meterTextBoxBackground]
+IfMatchAction3=[!SetOption meterTextBoxBackground LeftMouseUpAction """[!CommandMeasure measureInput "ExecuteBatch 3"]"""][!UpdateMeter meterTextBoxBackground]
 
 [meterBackground]
 Meter=Shape
