--- a/Weather/AQI/AQI.ini
+++ b/Weather/AQI/AQI.ini
@@ -22,7 +22,7 @@ Measure=String
 DynamicVariables=1
 String=%UheWeatherAPIKey%
 IfMatch=\%UheWeatherAPIKey\%
-IfMatchAction=[!SetOption meterSide Text "#Label# Enter key"][!SetOption meterClick LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
+IfMatchAction=[!SetOption meterSide Text "#Label# Enter key"][!SetOption meterClick LeftMouseUpAction """[!CommandMeasure measureInput "ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
 IfNotMatchAction=[!EnableMeasure measureCity][!CommandMeasure measureCity "Update"]
 
 [measureCity]
@@ -30,7 +30,7 @@ Measure=WebParser
 URL=#HostName#/v#APIVersion#/city?city=#City#&state=#State#&country=#Country#&key=%UheWeatherAPIKey%
 RegExp=(?siU).*"aqius":(.*),.*
 UpdateRate=900
-OnRegExpErrorAction=[!SetOption meterSide Text "#Label# Invalid key"][!SetOption meterClick LeftMouseUpAction """!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
+OnRegExpErrorAction=[!SetOption meterSide Text "#Label# Invalid key"][!SetOption meterClick LeftMouseUpAction """[!CommandMeasure measureInput "ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
 Disabled=1
 
 [measureAQI]
