--- a/InputText/InputText.ini
+++ b/InputText/InputText.ini
@@ -20,7 +20,7 @@ FontSize=14
 FontFace=#FontFace#
 AntiAlias=1
 DefaultValue=type to search
-Command1=!Execute ["http://www.google.com/search?q=$UserInput$"]
+Command1=["http://www.google.com/search?q=$UserInput$"]
 Group=TextGroup | TextBoxGroup
 
 [meterMiddleBackground]
@@ -48,7 +48,7 @@ FontSize=12
 FontFace=#FontFace#
 Text=#icon#
 Padding=#PaddingSize#
-LeftMouseUpAction=!Execute [!RainmeterPluginBang "measureInput ExecuteBatch 1"]
+LeftMouseUpAction=[!CommandMeasure measureInput "ExecuteBatch 1"]
 Group=TextGroup
 MouseOverAction=[!SetOption meterMiddleHover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterMiddleHover][!Redraw]
 MouseLeaveAction=[!SetOption meterMiddleHover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterMiddleHover][!Redraw]
