Enclose every left mouse up action bang with brackets

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -261,7 +261,7 @@ StringIndex=16
 
 [meterAvatar]
 MeasureName=measureAvatarDownload
-LeftMouseUpAction=https://osu.ppy.sh/users/#Username#
+LeftMouseUpAction=["https://osu.ppy.sh/users/#Username#"]
 ToolTipText=Left: Go to player info
 ToolTipTitle=Actions
 
