--- a/Launchers/Programs/default.ini
+++ b/Launchers/Programs/default.ini
@@ -11,5 +11,5 @@ Information=A button to go to Windows Update.
 icon=[\xf03a]
 
 [meterIcon]
-LeftMouseUpAction=ms-settings:appsfeatures
+LeftMouseUpAction=["ms-settings:appsfeatures"]
 ToolTipText=Apps & features
