--- a/Launchers/Spotify/default.ini
+++ b/Launchers/Spotify/default.ini
@@ -12,7 +12,7 @@ icon=[\xf1bc]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=spotify.exe
+LeftMouseUpAction=["spotify.exe"]
 ; https://developer.spotify.com/documentation/general/design-and-branding/
 ; FontColor=30,215,96
 ; Group=
