Add button click sample

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -261,7 +261,7 @@ StringIndex=16
 
 [meterAvatar]
 MeasureName=measureAvatarDownload
-LeftMouseUpAction=["https://osu.ppy.sh/users/#Username#"]
+LeftMouseUpAction=#PlayButtonClick#["https://osu.ppy.sh/users/#Username#"]
 ToolTipText=Left: Go to player info
 ToolTipTitle=Actions
 
@@ -317,7 +317,7 @@ X=r
 Padding=#PaddingSize#
 AntiAlias=1
 Hidden=1
-LeftMouseUpAction=[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]
 ToolTipText=[measureModeName]
 ToolTipTitle=Mode
 
@@ -452,7 +452,7 @@ W=(#InfoWidth# - [meterMode:W] - #SidePadding#)
 H=29
 SolidColor=#ClickableTransparentColor#
 AntiAlias=1
-LeftMouseUpAction=[!CommandMeasure measureInput "ExecuteBatch 1"]
+LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureInput "ExecuteBatch 1"]
 ToolTipTitle=Actions
 
 [measureLightMode]
