--- a/InputText/InputText.ini
+++ b/InputText/InputText.ini
@@ -48,7 +48,7 @@ FontSize=12
 FontFace=#FontFace#
 Text=#icon#
 Padding=#PaddingSize#
-LeftMouseUpAction=[!CommandMeasure measureInput "ExecuteBatch 1"]
+LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureInput "ExecuteBatch 1"]
 Group=TextGroup
 MouseOverAction=[!SetOption meterMiddleHover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterMiddleHover][!Redraw]
 MouseLeaveAction=[!SetOption meterMiddleHover Highlight "Fill Color 0,0,0,0"][!UpdateMeter meterMiddleHover][!Redraw]
