--- a/Launchers/Battle.net/default.ini
+++ b/Launchers/Battle.net/default.ini
@@ -12,5 +12,5 @@ icon=[\xf835]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["%programfiles(x86)%\Battle.net\Battle.net Launcher.exe"]
+LeftMouseUpAction=#PlayButtonClick#["%programfiles(x86)%\Battle.net\Battle.net Launcher.exe"]
 ToolTipText=Battle.net
