--- a/Launchers/Calculator/default.ini
+++ b/Launchers/Calculator/default.ini
@@ -11,5 +11,5 @@ Information=A handy calculator launcher.
 icon=[\xf1ec]
 
 [meterIcon]
-LeftMouseUpAction=["calc.exe"]
+LeftMouseUpAction=#PlayButtonClick#["calc.exe"]
 ToolTipText=Calculator
