--- a/Launchers/GitHubDesktop/default.ini
+++ b/Launchers/GitHubDesktop/default.ini
@@ -12,5 +12,5 @@ icon=[\xf092]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["%localappdata%\GitHubDesktop\GitHubDesktop.exe"]
+LeftMouseUpAction=#PlayButtonClick#["%localappdata%\GitHubDesktop\GitHubDesktop.exe"]
 ToolTipText=GitHub Desktop
