--- a/Launchers/GoogleChrome/default.ini
+++ b/Launchers/GoogleChrome/default.ini
@@ -12,5 +12,5 @@ icon=[\xf268]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["%programfiles%\Google\Chrome\Application\chrome.exe"]
+LeftMouseUpAction=#PlayButtonClick#["%programfiles%\Google\Chrome\Application\chrome.exe"]
 ToolTipText=Google Chrome
