--- a/Launchers/RecycleBin/default.ini
+++ b/Launchers/RecycleBin/default.ini
@@ -36,6 +36,6 @@ InlinePattern=#icon#
 Text=#icon#  %2 #ItemUnit# | %1B
 AutoScale=2
 NumOfDecimals=0
-LeftMouseUpAction=[!CommandMeasure measureBinCount "OpenBin"]
+LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureBinCount "OpenBin"]
 Group=TextGroup
 ToolTipText=Recycle Bin
