--- a/Launchers/Steam/default.ini
+++ b/Launchers/Steam/default.ini
@@ -12,5 +12,5 @@ icon=[\xf1b6]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["%programfiles(x86)%\Steam\Steam.exe"]
+LeftMouseUpAction=#PlayButtonClick#["%programfiles(x86)%\Steam\Steam.exe"]
 ToolTipText=Steam
