--- a/Launchers/Update/default.ini
+++ b/Launchers/Update/default.ini
@@ -11,5 +11,5 @@ Information=A button to go to Windows Update.
 icon=[\xf021]
 
 [meterIcon]
-LeftMouseUpAction=["ms-settings:windowsupdate"]
+LeftMouseUpAction=#PlayButtonClick#["ms-settings:windowsupdate"]
 ToolTipText=Windows Update
