--- a/Launchers/Visual Studio Code/default.ini
+++ b/Launchers/Visual Studio Code/default.ini
@@ -13,7 +13,7 @@ icon=vscode-alt.png
 [meterIcon]
 Meter=Image
 ImageName=#icon#
-LeftMouseUpAction=["%localappdata%\Programs\Microsoft VS Code\Code.exe"]
+LeftMouseUpAction=#PlayButtonClick#["%localappdata%\Programs\Microsoft VS Code\Code.exe"]
 Group=SpriteGroup
 H=34
 W=34
