--- a/Launchers/YouTube/default.ini
+++ b/Launchers/YouTube/default.ini
@@ -12,7 +12,7 @@ icon=[\xf167]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["https://www.youtube.com/"
+LeftMouseUpAction=#PlayButtonClick#["https://www.youtube.com/"
 ; https://www.youtube.com/howyoutubeworks/resources/brand-resources/#logos-icons-and-colors
 ; FontColor=255,0,0
 ; Group=
