--- a/Launchers/itch.io/default.ini
+++ b/Launchers/itch.io/default.ini
@@ -12,5 +12,5 @@ icon=[\xf83a]
 
 [meterIcon]
 FontFace=#BrandFace#
-LeftMouseUpAction=["%localappdata%\itch\itch-setup.exe" --prefer-launch --appname itch]
+LeftMouseUpAction=#PlayButtonClick#["%localappdata%\itch\itch-setup.exe" --prefer-launch --appname itch]
 ToolTipText=itch.io
