--- a/Launchers/osu!/default.ini
+++ b/Launchers/osu!/default.ini
@@ -13,7 +13,7 @@ icon=osu! Logo.png
 [meterIcon]
 Meter=Image
 ImageName=#icon#
-LeftMouseUpAction=["osu://"]
+LeftMouseUpAction=#PlayButtonClick#["osu://"]
 W=34
 H=34
 Group=SpriteGroup
