--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -108,7 +108,7 @@ Padding=#PaddingSize#
 Text=[\xf0c9]
 AntiAlias=1
 FontSize=16
-LeftMouseUpAction=[!WriteKeyValue Variables Expanded #ToggleExpanded#][!SetVariable Expanded #ToggleExpanded#][!UpdateMeasure measureExpanded][!UpdateMeter meterToggle]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Expanded #ToggleExpanded#][!SetVariable Expanded #ToggleExpanded#][!UpdateMeasure measureExpanded][!UpdateMeter meterToggle]
 Group=TextGroup
 DynamicVariables=1
 MouseOverAction=[!SetOption meterToggleHover Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterToggleHover][!Redraw]
@@ -154,7 +154,7 @@ Text=Gradient
 [meterToggleGradient]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=[!WriteKeyValue Variables Gradient #ToggleGradient# "#@#Variables/uservariables.inc"][!SetVariableGroup Gradient #ToggleGradient# AllSkins][!UpdateGroup AllSkins][!Update]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Gradient #ToggleGradient# "#@#Variables/uservariables.inc"][!SetVariableGroup Gradient #ToggleGradient# AllSkins][!UpdateGroup AllSkins][!Update]
 
 [meterLabelLightHighlight]
 Meter=String
@@ -178,7 +178,7 @@ Group=TextGroup | TextBoxGroup
 [meterClickLightHighlight]
 Meter=Image
 MeterStyle=styleClick
-LeftMouseUpAction=[!CommandMeasure measureInputLightHighlight "ExecuteBatch 1"]
+LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureInputLightHighlight "ExecuteBatch 1"]
 
 [meterLabelDarkHighlight]
 Meter=String
@@ -202,7 +202,7 @@ Group=TextGroup | TextBoxGroup
 [meterClickDarkHighlight]
 Meter=Image
 MeterStyle=styleClick
-LeftMouseUpAction=[!CommandMeasure measureInputDarkHighlight "ExecuteBatch 1"]
+LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureInputDarkHighlight "ExecuteBatch 1"]
 
 [meterLabelIcons]
 Meter=String
@@ -212,7 +212,7 @@ Text=Icons
 [meterToggleIcons]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=[!WriteKeyValue Variables Icons #ToggleIcons# "#@#Variables/uservariables.inc"][!SetVariable Icons #ToggleIcons#][!SetVariableGroup Icons #ToggleIcons# IconSkins][!UpdateGroup IconSkins][!UpdateMeasure measureIcons][!UpdateMeter meterToggleIcons][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!WriteKeyValue Variables Icons #ToggleIcons# "#@#Variables/uservariables.inc"][!SetVariable Icons #ToggleIcons#][!SetVariableGroup Icons #ToggleIcons# IconSkins][!UpdateGroup IconSkins][!UpdateMeasure measureIcons][!UpdateMeter meterToggleIcons][!Redraw]
 
 [meterLabelLightMode]
 Meter=String
@@ -222,7 +222,7 @@ Text=Light Mode
 [meterToggleLightMode]
 Meter=String
 MeterStyle=styleToggle
-LeftMouseUpAction=[!CommandMeasure measureChangeAppsLightMode Run][!CommandMeasure measureChangeSystemLightMode Run][!UpdateMeasure measureToggleLightMode][!UpdateMeter meterToggleLightMode][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureChangeAppsLightMode Run][!CommandMeasure measureChangeSystemLightMode Run][!UpdateMeasure measureToggleLightMode][!UpdateMeter meterToggleLightMode][!Redraw]
 
 [measureChangeAppsLightMode]
 Measure=Plugin
