--- a/Time/Digital/Digital.ini
+++ b/Time/Digital/Digital.ini
@@ -123,7 +123,7 @@ Padding=#PaddingSize#
 Group=TextGroup
 MouseOverAction=#HorizontalExpandCommand#
 MouseLeaveAction=#HorizontalCollapseCommand#
-LeftMouseUpAction=[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!WriteKeyValue Variables InitialTimestampOpened 1][!SetVariable InitialTimestampOpened 1][!Redraw]
+LeftMouseUpAction=#PlayButtonClick#[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!WriteKeyValue Variables InitialTimestampOpened 1][!SetVariable InitialTimestampOpened 1][!Redraw]
 
 [measureInitialTimestampOpen]
 Measure=Calc
