Autosize dropdowns with strings instead of hardcode size

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -10,7 +10,7 @@ License=MIT License
 Information=A usercard that lists the important stats of osu!.
 
 [Variables]
-DropdownHeight=(40 + (#SidePadding# * 2))
+DropdownHeight=60
 BaseRegExp=(?siU).*"avatar_url":"(.*)",.*"id":(.*),.*"username":"(.*)",.*"cover_url":"(.*)",.*"rank_highest":{"rank":(.*),"updated_at":"(.*)"}.*"current":(.*),.*"progress":(.*)\},.*"global_rank":(.*),.*"pp":(.*),.*"hit_accuracy":(.*),.*"ss":(.*),.*"ssh":(.*),.*"s":(.*),.*"sh":(.*),.*"a":(.*)},
 InvalidUserRegExp=(?siU).*"error".*
 OsuFinishAction=[!ShowMeter meterMode][!SetOption meterMode LeftMouseUpAction """[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]"""][!DisableMeasure measureChangeRegExp][!EnableMeasure measureUserIDString][!EnableMeasure measureMinimal][!UpdateMeasure measureMinimal][!SetOption meterCard Text "[measureUserName]#CRLF#%1#CRLF#%2#CRLF#%3"][!UpdateMeter meterCard][!Redraw]#BaseFinishAction#[!EnableMeasure measureAvatarDownload][!EnableMeasure measureCoverDownload][!CommandMeasure measureAvatarDownload "Update"][!CommandMeasure measureCoverDownload "Update"][!SetOption meterClick ToolTipText "Left: Change Username"]
@@ -336,11 +336,10 @@ Y=[meterCard:H]
 [meterDropdown]
 Meter=Image
 DynamicVariables=1
-W=([meterAvatar:W] + #InfoWidth# - (#SidePadding# * 2))
+W=([meterAvatar:W] + #InfoWidth#)
 SolidColor=0,0,0
 Y=r
 Hidden=1
-Padding=#PaddingSize#
 
 [styleGrade]
 Container=meterDropdown
@@ -348,7 +347,7 @@ DynamicVariables=1
 FontFace=#IconFace#
 FontSize=18
 AntiAlias=1
-Y=#DropdownHeight# / 3
+Y=(#DropdownHeight# / 3)
 StringAlign=CenterCenter
 
 [styleCounter]
