--- a/Time/Digital/Digital.ini
+++ b/Time/Digital/Digital.ini
@@ -11,7 +11,7 @@ License=MIT License
 Information=Checks time using digital.
 
 [Variables]
-DropdownHeight=280
+DropdownHeight=[meterDropdownContent:W]
 InitialTimestampOpened=0
 
 [MeasureWindowsTime]
@@ -146,6 +146,12 @@ Group=OpaqueBackgroundGroup
 X=R
 
 [meterDropdown]
+Meter=Image
+X=r
+H=[meterEdge:H]
+SolidColor=0,0,0
+
+[meterDropdownContent]
 Meter=String
 MeasureName=measureDayPassedString
 MeasureName2=measureHrLeft
@@ -155,12 +161,11 @@ AntiAlias=1
 FontFace=#FontFace#
 FontSize=12
 Padding=#PaddingSize#
-Hidden=1
 Text=Day Passed: %1%#CRLF##CRLF#Time Before TMR: %2 hr %3 min %4 sec
 StringAlign=LeftCenter
-X=r
 Y=([meterEdge:H] / 2)
 H=([meterEdge:H] - (#SidePadding# * 2))
 Group=TextGroup
+Container=meterDropdown
 
 @Include=timestampgen.inc
