--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -13,7 +13,6 @@ Information=Toggles different looks of the skin and system.
 Width=200
 HeightExpanded=325
 DropdownHeight=#HeightExpanded#
-HeightCollapsed=(30 + (#SidePadding# * 2))
 Expanded=0
 
 [measureExpanded]
@@ -82,8 +81,7 @@ Y=R
 [meterDropdown]
 Meter=Image
 Y=r
-W=(#Width# - (#SidePadding# * 2))
-Padding=#PaddingSize#
+W=#Width#
 Hidden=1
 SolidColor=0,0,0
 
