Refactor webparser measures to use json parsing

--- a/RMSKIN/Skins/uhe/Weather/AQI/AQI.ini
+++ b/RMSKIN/Skins/uhe/Weather/AQI/AQI.ini
@@ -28,10 +28,12 @@ IfNotMatchAction=[!EnableMeasure measureCity][!CommandMeasure measureCity "Updat
 [measureCity]
 Measure=WebParser
 URL=#HostName#/v#APIVersion#/city?city=#City#&state=#State#&country=#Country#&key=%UheWeatherAPIKey%
-RegExp=(?siU).*"aqius":(.*),.*
+ParseMode=Json
+JsonValuePath1=/data/current/pollution/aqius
 UpdateRate=900
 OnRegExpErrorAction=[!SetOption meterSide Text "#Label# Invalid key"][!SetOption meterClick LeftMouseUpAction """[!CommandMeasure measureInput "ExecuteBatch 1"]"""][!SetOption meterClick TooltipText "Right: Go to IQAir API dashboard"][!SetOption meterClick RightMouseUpAction "https://www.iqair.com/us/dashboard/api"]
 Disabled=1
+; Debug=2
 
 [measureAQI]
 Measure=WebParser
