Fix SS scores showing as X/XH
Also fixes rank display in test.

--- a/Tests/Games/osu!/Recent/Recent.ini
+++ b/Tests/Games/osu!/Recent/Recent.ini
@@ -101,7 +101,7 @@ LowBound=0
 HighBound=5
 Substitute='(.+)':"+\1","0":"HD","1":"HDSD","2":"HDPF","3":"HDDT","4":"HDSDDT","5":"HDDTPF"
 
-[measureRank]
+[measureRankRandom]
 Measure=Calc
 Group=RandomizeGroup
 UpdateRandom=1
@@ -110,7 +110,14 @@ Disabled=1
 Formula=Random
 LowBound=0
 HighBound=8
-Substitute="0":"XH","1":"X","2":"SH","3":"S","4":"A","5":"B","6":"C","7":"D","8":"F","F":"D"
+Substitute="0":"XH","1":"X","2":"SH","3":"S","4":"A","5":"B","6":"C","7":"D","8":"F"
+OnUpdateAction=[!UpdateMeasure measureRank]
+
+[measureRank]
+Measure=String
+String=[measureRankRandom]
+DynamicVariables=1
+UpdateDivider=-1
 
 [measurePPString]
 Measure=Calc
