--- a/Games/osu!/Recent/Recent.ini
+++ b/Games/osu!/Recent/Recent.ini
@@ -101,7 +101,6 @@ Substitute='(.+)':"+\1", '"':"", ",":""
 Measure=WebParser
 URL=[measureBestData]
 StringIndex=7
-Substitute="F":"D"
 IfMatch=X|S
 IfMatchAction=[!SetOption meterBestRank FontColor 255,255,0]
 IfMatch2=XH|SH
@@ -115,7 +114,7 @@ IfMatchAction4=[!SetOption meterBestRank FontColor 194,59,34]
 Measure=String
 DynamicVariables=1
 String=[measureBestRank]
-Substitute="SSH":"SS", "SH":"S"
+Substitute="XH":"SS", "X":"SS", "SH":"S", "F":"D"
 
 [measureBestID]
 Measure=WebParser
