Fix font face of "No score on this map" string

--- a/Games/osu!/Recent/Recent.ini
+++ b/Games/osu!/Recent/Recent.ini
@@ -28,7 +28,7 @@ RegExp=(?siU)#AccuracyRegExp##BestIDRegExp##CreatedAtRegExp##MaxComboRegExp##Mod
 Disabled=1
 FinishAction=[!EnableMeasure measureSameScore][!UpdateMeasure measureSameScore][!DisableMeasure measureSameScore]
 OnConnectErrorAction=[!HideMeterGroup BestContent][!DisableMeasureGroup BestTimeMeasures][!ShowMeterGroup BestLoadingGroup]
-OnRegExpErrorAction=[!HideMeterGroup BestContent][!DisableMeasureGroup BestTimeMeasures][!ShowMeterGroup BestLoadingGroup][!SetOption meterBestLoading Text "No score on this map..."][!HideMeter meterBestSpinnerBackground][!HideMeter meterBestLoadingSpinner]
+OnRegExpErrorAction=[!HideMeterGroup BestContent][!DisableMeasureGroup BestTimeMeasures][!ShowMeterGroup BestLoadingGroup][!SetOption meterBestLoading FontFace "#FontFace#"][!SetOption meterBestLoading Text "No score on this map..."][!HideMeter meterBestSpinnerBackground][!HideMeter meterBestLoadingSpinner]
 ;Debug=2
 ;Debug2File=best-data.txt
 
