--- a/Games/osu!/Recent/Recent.ini
+++ b/Games/osu!/Recent/Recent.ini
@@ -36,7 +36,7 @@ OnRegExpErrorAction=[!HideMeterGroup BestContent][!DisableMeasureGroup BestTimeM
 Measure=Calc
 DynamicVariables=1
 IfCondition=[measureBestID] = [measureScoreBestID]
-IfTrueAction=[!DisableMeasureGroup BestTimeMeasures][!SetOption meterBestLoading FontFace "#IconFace#"][!SetOption meterBestLoading Text "[\xf177]"][!HideMeter meterBestSpinnerBackground][!HideMeter meterBestLoadingSpinner]
+IfTrueAction=[!DisableMeasureGroup BestTimeMeasures][!ShowMeterGroup BestLoadingGroup][!SetOption meterBestLoading FontFace "#IconFace#"][!SetOption meterBestLoading Text "[\xf177]"][!HideMeter meterBestSpinnerBackground][!HideMeter meterBestLoadingSpinner]
 IfFalseAction=[!ShowMeterGroup BestContent][!EnableMeasureGroup BestTimeMeasures][!HideMeterGroup BestLoadingGroup]
 Disabled=1
 
