Modify TranslucentTaskbar skin a bit

--- a/CustomTaskbar/TranslucentTaskbar/default.ini
+++ b/CustomTaskbar/TranslucentTaskbar/default.ini
@@ -8,13 +8,11 @@ Information=Translucent Taskbar
 Version=1.0
 License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
 
-[Variables]
-
 [MeterString]
 Meter=String
 
-
 [TranslucentTaskbar]
- Measure=Plugin
- Plugin=TranslucentTaskbar
- UpdateDivider=1
+Measure=Plugin
+Plugin=TranslucentTaskbar
+UpdateDivider=1
+AccentState=2
