Improve compatibility handling of CustomTaskbar skin

--- a/CustomTaskbar/Monitor 1/CustomTaskbar.ini
+++ b/CustomTaskbar/Monitor 1/CustomTaskbar.ini
@@ -5,4 +5,7 @@
 Author=Joehu
 Version=1.0
 License=MIT License
-Information=Adds a custom background for the taskbar on monitor 1. Needs TranslucentTaskbar.
+Information=Displays a custom background for the taskbar on monitor 1. Requires Windows 10+. Currently disabled on Windows 11 22H2 and above pending fix.
+
+[measureWinVer]
+IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\Monitor 1"][!Log "CustomTaskbar is only compatible with Windows 10+"]
