--- a/CustomTaskbar/TranslucentTaskbar/default.ini
+++ b/CustomTaskbar/TranslucentTaskbar/default.ini
@@ -4,9 +4,20 @@ Update=10
 [Metadata]
 Name=TranslucentTaskbar
 Author=arkenthera
-Information=Translucent Taskbar
+Information=Translucent Taskbar. Requires Windows 10+. Currently disabled on Windows 11 22H2 and above pending fix.
 Version=1.0
 License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
+
+[measureWinVer]
+Measure=Registry
+RegHKey=HKEY_LOCAL_MACHINE
+RegKey=SOFTWARE\Microsoft\Windows NT\CurrentVersion
+RegValue=CurrentBuild
+UpdateDivider=-1
+; Windows 10+
+; currently disabled on Windows 11 22H2 and above pending fix
+IfCondition=(measureWinVer >= 10240) && (measureWinVer < 22621)
+IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "TranslucentTaskbar is only compatible with Windows 10+"]
 
 [MeterString]
 Meter=String
