Improve compatibility logging

--- a/CustomTaskbar/Monitor 1/CustomTaskbar.ini
+++ b/CustomTaskbar/Monitor 1/CustomTaskbar.ini
@@ -8,4 +8,4 @@ License=MIT License
 Information=Displays a custom background for the taskbar on monitor 1. Requires Windows 10+. Currently disabled on Windows 11 22H2 and above pending fix.
 
 [measureWinVer]
-IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\Monitor 1"][!Log "CustomTaskbar is only compatible with Windows 10+"]
+IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\Monitor 1"][!Log "Automatically unloaded due to TranslucentTaskbar not working"]
