--- a/CustomTaskbar/TranslucentTaskbar/default.ini
+++ b/CustomTaskbar/TranslucentTaskbar/default.ini
@@ -16,8 +16,10 @@ RegValue=CurrentBuild
 UpdateDivider=-1
 ; Windows 10+
 ; currently disabled on Windows 11 22H2 and above pending fix
-IfCondition=(measureWinVer >= 10240) && (measureWinVer < 22621)
-IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "TranslucentTaskbar is only compatible with Windows 10+"]
+IfCondition=measureWinVer >= 10240
+IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "Only compatible with Windows 10+"]
+IfCondition2=measureWinVer < 22621
+IfFalseAction2=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "Not currently compatible with Windows 11 22H2 and above"]
 
 [MeterString]
 Meter=String
