Improve handling of quit behavior
Because updating the environmental variables need a full restart of the app.

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -86,7 +86,7 @@ Measure=Plugin
 Plugin=RunCommand
 DynamicVariables=1
 Parameter=setx UheOsuClientID #inputClientID#
-FinishAction=[!Quit]
+FinishAction=[!ActivateConfig "uhe\Dialogs\Quit"][!SetVariable Skin "osu! usercard" "uhe\Dialogs\Quit"][!Update "uhe\Dialogs\Quit"]
 OutputType=UTF8
 
 [measureCheckSecret]
@@ -102,7 +102,7 @@ Measure=Plugin
 Plugin=RunCommand
 DynamicVariables=1
 Parameter=setx UheOsuClientSecret #inputClientSecret#
-FinishAction=[!Quit]
+FinishAction=[!ActivateConfig "uhe\Dialogs\Quit"][!SetVariable RequestedSkin "osu! usercard" "uhe\Dialogs\Quit"][!Update "uhe\Dialogs\Quit"]
 OutputType=UTF8
 
 [measureAvatar]
