--- a/Weather/AQI/AQI.ini
+++ b/Weather/AQI/AQI.ini
@@ -72,7 +72,7 @@ Measure=Plugin
 Plugin=RunCommand
 DynamicVariables=1
 Parameter=setx UheWeatherAPIKey #inputAPIKey#
-FinishAction=[!Quit]
+FinishAction=[!ActivateConfig "uhe\Dialogs\Quit"][!SetVariable RequestedSkin "AQI weather" "uhe\Dialogs\Quit"][!Update "uhe\Dialogs\Quit"]
 OutputType=UTF8
 
 [meterClick]
