Fix timestamp format and missing variable errors

--- a/Games/osu!/Usercard/Usercard.ini
+++ b/Games/osu!/Usercard/Usercard.ini
@@ -13,7 +13,7 @@ Information=A usercard that lists the important stats of osu!.
 DropdownHeight=60
 BaseRegExp=(?siU).*"avatar_url":"(.*)",.*"id":(.*),.*"username":"(.*)",.*"cover_url":"(.*)",.*"rank_highest":{"rank":(.*),"updated_at":"(.*)"}.*"current":(.*),.*"progress":(.*)\},.*"global_rank":(.*),.*"pp":(.*),.*"hit_accuracy":(.*),.*"ss":(.*),.*"ssh":(.*),.*"s":(.*),.*"sh":(.*),.*"a":(.*)},
 InvalidUserRegExp=(?siU).*"error".*
-OsuFinishAction=[!ShowMeter meterMode][!SetOption meterMode LeftMouseUpAction """[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]"""][!DisableMeasure measureChangeRegExp][!EnableMeasure measureUserIDString][!EnableMeasure measureMinimal][!UpdateMeasure measureMinimal][!SetOption meterCard Text "[measureUserName]#CRLF#%1#CRLF#%2#CRLF#%3"][!UpdateMeter meterCard][!Redraw]#BaseFinishAction#[!EnableMeasure measureAvatarDownload][!EnableMeasure measureCoverDownload][!CommandMeasure measureAvatarDownload "Update"][!CommandMeasure measureCoverDownload "Update"][!SetOption meterClick ToolTipText "Left: Change Username"]
+OsuFinishAction=[!ShowMeter meterMode][!SetOption meterMode LeftMouseUpAction """[!SetOption meterMode LeftMouseUpAction ""][!EnableMeasure measureMode][!UpdateMeasure measureMode][!UpdateMeasure measureModeIcon][!CommandMeasure measureData Update][!UpdateMeter meterMode][!Redraw]"""][!DisableMeasure measureChangeRegExp][!EnableMeasure measureUserIDString][!EnableMeasure measureMinimal][!UpdateMeasure measureMinimal][!SetOption meterCard Text "[measureUserName]#CRLF#%1#CRLF#%2#CRLF#%3"][!UpdateMeter meterCard][!Redraw]#BaseFinishAction#[!EnableMeasure measureAvatarDownload][!EnableMeasure measureCoverDownload][!CommandMeasure measureAvatarDownload "Update"][!CommandMeasure measureCoverDownload "Update"][!SetOption meterClick ToolTipText "Left: Change Username"][!EnableMeasure measureHighestRankDate]
 
 [measureMode]
 Measure=String
@@ -176,6 +176,7 @@ DynamicVariables=1
 Timestamp=[measureHighestRankDateWeb]
 TimeStampFormat=%Y-%m-%dT%H:%M:%SZ
 Format=%#d %b %Y
+Disabled=1
 
 [measureLevel]
 Measure=WebParser
