Reduce variable count

--- a/Games/osu!/Usercard/default.ini
+++ b/Games/osu!/Usercard/default.ini
@@ -456,7 +456,7 @@ LeftMouseUpAction=#PlayButtonClick#[!CommandMeasure measureInput "ExecuteBatch 1
 ToolTipTitle=Actions
 
 [measureLightMode]
-IfTrueAction=#TrueAction#[!SetOption meterRank FontColor #DarkFontColor#,150]
-IfTrueAction2=#TrueAction2#[!SetOption meterRank FontColor #LightFontColor#,150]
-IfTrueAction3=#TrueAction3#[!SetOption meterRank FontColor #LightFontColor#,150]
-IfTrueAction4=#TrueAction4#[!SetOption meterRank FontColor #DarkFontColor#,150]
+IfTrueAction=#SetDarkModeGradient#[!SetOption meterRank FontColor #DarkFontColor#,150]
+IfTrueAction2=#SetLightMode#[!SetOption meterRank FontColor #LightFontColor#,150]
+IfTrueAction3=#SetLightModeGradient#[!SetOption meterRank FontColor #LightFontColor#,150]
+IfTrueAction4=#SetDarkMode#[!SetOption meterRank FontColor #DarkFontColor#,150]
