Replace search with search engine icon when possible

--- a/SearchBar/Google.ini
+++ b/SearchBar/Google.ini
@@ -8,4 +8,8 @@ License=MIT License
 Information=Searches stuff on Google.
 
 [Variables]
+icon=[\xf1a0]
 Url=https://www.google.com/search?q=$UserInput$
+
+[meterMiddle]
+FontFace=#BrandFace#
