--- a/Games/osu!/Usercard/default.ini
+++ b/Games/osu!/Usercard/default.ini
@@ -102,7 +102,7 @@ Measure=Plugin
 Plugin=RunCommand
 DynamicVariables=1
 Parameter=setx UheOsuClientSecret #inputClientSecret#
-FinishAction=[!ActivateConfig "uhe\Dialogs\Quit"][!SetVariable RequestedSkin "osu! usercard" "uhe\Dialogs\Quit"][!Update "uhe\Dialogs\Quit"]
+FinishAction=[!ActivateConfig "uhe\Dialogs\Quit"][!SetVariable RequestedItem "osu! usercard" "uhe\Dialogs\Quit"][!Update "uhe\Dialogs\Quit"]
 OutputType=UTF8
 
 [measureAvatar]
