Notify user of new suite updates when the settings skin is loaded

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -2,6 +2,7 @@
 @Include=#@#Variables/mainvariables.inc
 ContextTitle2="Edit user variables"
 ContextAction2=["#@#Variables/uservariables.inc"]
+OnRefreshAction=[!CommandMeasure measureNewUpdate Run]
 
 [Metadata]
 Author=Joehu
@@ -45,6 +46,24 @@ Formula=[measureLightMode]
 IfCondition=measureToggleLightMode = 0
 IfTrueAction=[!SetOption meterToggleLightMode Text [\xf204]][!SetVariable ToggleLightMode 1]
 IfFalseAction=[!SetOption meterToggleLightMode Text [\xf205]][!SetVariable ToggleLightMode 0]
+DynamicVariables=1
+
+[measureNewUpdate]
+Measure=Plugin
+Plugin=RunCommand
+Parameter=curl --no-progress-meter -L -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/Joehuu/uhe/releases/latest
+OutputType=ANSI
+RegExpSubstitute=1
+Substitute='[\s\S]*"tag_name": "(.+)"[\s\S]*':"\1"
+FinishAction=[!EnableMeasure measureOpenUpdateDialog][!UpdateMeasure measureOpenUpdateDialog][!DisableMeasure measureOpenUpdateDialog]
+
+[measureOpenUpdateDialog]
+Measure=String
+String=[measureNewUpdate]
+IfMatch=#CurrentVersion#
+IfNotMatchAction=[!ActivateConfig "uhe\Dialogs\Update"][!SetVariable RequestedItem "[measureNewUpdate]" "uhe\Dialogs\Update"][!Update "uhe\Dialogs\Update"]
+UpdateDivider=-1
+Disabled=1
 DynamicVariables=1
 
 [meterTitleBackground]
