Fix include on osu! usercard test

--- a/Tests/Games/osu!/Usercard/Usercard.ini
+++ b/Tests/Games/osu!/Usercard/Usercard.ini
@@ -1,5 +1,5 @@
 [Rainmeter]
-@Include=#ROOTCONFIGPATH#\Games\osu!\Usercard\Usercard.ini
+@Include=#ROOTCONFIGPATH#\Games\osu!\Usercard\minimal.ini
 
 [Metadata]
 Author=Joehu
