Don't show recycle bin size if it has no items

--- a/Launchers/RecycleBin/default.ini
+++ b/Launchers/RecycleBin/default.ini
@@ -21,8 +21,8 @@ IfCondition=measureBinCount = 1
 IfTrueAction=[!SetVariable ItemUnit item][!UpdateMeter meterIcon]
 IfFalseAction=[!SetVariable ItemUnit items][!UpdateMeter meterIcon]
 IfCondition2=measureBinCount > 0
-IfTrueAction2=[!SetOption meterIcon RightMouseUpAction """[!CommandMeasure measureBinCount "EmptyBin"]"""]
-IfFalseAction2=[!SetOption meterIcon RightMouseUpAction ""]
+IfTrueAction2=[!SetOption meterIcon RightMouseUpAction """[!CommandMeasure measureBinCount "EmptyBin"]"""][!SetOption meterIcon Text "#icon#  %2 #ItemUnit# | %1B"][!UpdateMeter meterIcon]
+IfFalseAction2=[!SetOption meterIcon RightMouseUpAction ""][!SetOption meterIcon Text "#icon#  %2 #ItemUnit#"][!UpdateMeter meterIcon]
 OnChangeAction=[!UpdateMeter meterIcon]
 
 [meterIcon]
