Fix settings skin notifying curl error when internet is down

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -55,7 +55,8 @@ Parameter=curl --no-progress-meter -L -H "Accept: application/vnd.github+json" -
 OutputType=ANSI
 RegExpSubstitute=1
 Substitute='[\s\S]*"tag_name": "(.+)"[\s\S]*':"\1"
-FinishAction=[!EnableMeasure measureOpenUpdateDialog][!UpdateMeasure measureOpenUpdateDialog][!DisableMeasure measureOpenUpdateDialog]
+IfMatch=\d*\.\d*\.\d*
+IfMatchAction=[!EnableMeasure measureOpenUpdateDialog][!UpdateMeasure measureOpenUpdateDialog][!DisableMeasure measureOpenUpdateDialog]
 
 [measureOpenUpdateDialog]
 Measure=String
