Add missing keyboard keys

--- a/KeyboardTester/default.ini
+++ b/KeyboardTester/default.ini
@@ -102,6 +102,27 @@ HotKey=F12
 KeyDownAction=#TypewriterPress#[!SetOption meterF12Highlight Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterF12Highlight][!UpdateMeter meterF12][!Redraw]
 KeyUpAction=[!SetOption meterF12Highlight Highlight "Fill Color 0,255,0,#NoGradientTransparency#"][!UpdateMeter meterF12Highlight][!UpdateMeter meterF12][!Redraw]
 
+[measurePrintScreen]
+Measure=Plugin
+Plugin=HotKey
+HotKey=PRINTSCREEN
+KeyDownAction=#TypewriterPress#[!SetOption meterPrintScreenHighlight Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterPrintScreenHighlight][!UpdateMeter meterPrintScreen][!Redraw]
+KeyUpAction=[!SetOption meterPrintScreenHighlight Highlight "Fill Color 0,255,0,#NoGradientTransparency#"][!UpdateMeter meterPrintScreenHighlight][!UpdateMeter meterPrintScreen][!Redraw]
+
+[measureScrollLock]
+Measure=Plugin
+Plugin=HotKey
+HotKey=SCROLLLOCK
+KeyDownAction=#TypewriterPress#[!SetOption meterScrollLockHighlight Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterScrollLockHighlight][!UpdateMeter meterScrollLock][!Redraw]
+KeyUpAction=[!SetOption meterScrollLockHighlight Highlight "Fill Color 0,255,0,#NoGradientTransparency#"][!UpdateMeter meterScrollLockHighlight][!UpdateMeter meterScrollLock][!Redraw]
+
+[measurePause]
+Measure=Plugin
+Plugin=HotKey
+HotKey=PAUSE
+KeyDownAction=#TypewriterPress#[!SetOption meterPauseHighlight Highlight "Fill Color #LightHighlight#,#NoGradientTransparency#"][!UpdateMeter meterPauseHighlight][!UpdateMeter meterPause][!Redraw]
+KeyUpAction=[!SetOption meterPauseHighlight Highlight "Fill Color 0,255,0,#NoGradientTransparency#"][!UpdateMeter meterPauseHighlight][!UpdateMeter meterPause][!Redraw]
+
 [measure`]
 Measure=Plugin
 Plugin=HotKey
@@ -917,6 +938,46 @@ MeterStyle=styleKeyHighlight
 [meterF12]
 Meter=String
 Text=F12
+MeterStyle=styleKey
+
+[meterPrintScreenBackground]
+Meter=Shape
+MeterStyle=styleKeyBackground
+X=(#ButtonWidth# / 4)R
+
+[meterPrintScreenHighlight]
+Meter=Shape
+MeterStyle=styleKeyHighlight
+
+[meterPrintScreen]
+Meter=String
+Text=PrtScr#CRLF#SysRq
+MeterStyle=styleKey
+
+[meterScrollLockBackground]
+Meter=Shape
+MeterStyle=styleKeyBackground
+
+[meterScrollLockHighlight]
+Meter=Shape
+MeterStyle=styleKeyHighlight
+
+[meterScrollLock]
+Meter=String
+Text=Scroll#CRLF#Lock
+MeterStyle=styleKey
+
+[meterPauseBackground]
+Meter=Shape
+MeterStyle=styleKeyBackground
+
+[meterPauseHighlight]
+Meter=Shape
+MeterStyle=styleKeyHighlight
+
+[meterPause]
+Meter=String
+Text=Pause#CRLF#Break
 MeterStyle=styleKey
 
 [meter`Background]
