Add back TranslucentTB option

--- a/CustomTaskbar/TranslucentTaskbar/default.ini
+++ b/CustomTaskbar/TranslucentTaskbar/default.ini
@@ -4,7 +4,7 @@ Update=10
 [Metadata]
 Name=TranslucentTaskbar
 Author=arkenthera
-Information=Translucent Taskbar. Requires Windows 10+. Currently disabled on Windows 11 22H2 and above pending fix.
+Information=Translucent Taskbar. Requires Windows 10+. Not currently compatible with Windows 11 22H2 and above, use TranslucentTB instead.
 Version=1.0
 License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
 
@@ -19,7 +19,7 @@ UpdateDivider=-1
 IfCondition=measureWinVer >= 10240
 IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "Only compatible with Windows 10+"]
 IfCondition2=measureWinVer < 22621
-IfFalseAction2=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "Not currently compatible with Windows 11 22H2 and above"]
+IfFalseAction2=[!DeactivateConfig "uhe\CustomTaskbar\TranslucentTaskbar"][!Log "Not currently compatible with Windows 11 22H2 and above, use TranslucentTB instead"]
 
 [MeterString]
 Meter=String
