--- a/CustomTaskbar/Monitor 2/CustomTaskbar.ini
+++ b/CustomTaskbar/Monitor 2/CustomTaskbar.ini
@@ -5,7 +5,7 @@
 Author=Joehu
 Version=1.0
 License=MIT License
-Information=Displays a custom background for the taskbar on monitor 2. Requires Windows 10+. Currently disabled on Windows 11 22H2 and above pending fix.
+Information=Displays a custom background for the taskbar on monitor 2. Requires Windows 10+ because it needs translucent taskbars.
 
 [measureWinVer]
-IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\Monitor 2"][!Log "Automatically unloaded due to TranslucentTaskbar not working"]
+IfFalseAction=[!DeactivateConfig "uhe\CustomTaskbar\Monitor 2"][!Log "Automatically unloaded due to translucent taskbars not working"]
