--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Games/osu\!/Usercard/DownloadFile/avatar.jpg
 Games/osu\!/Usercard/DownloadFile/cover.jpg
 Games/osu\!/Recent/DownloadFile/cover.jpg
 Games/osu\!/Best/DownloadFile/cover.jpg
+@Resources/Cache
