--- a/RMSKIN/RMSKIN.ini
+++ b/RMSKIN/RMSKIN.ini
@@ -1,7 +1,7 @@
 [rmskin]
 Name=uhe
 Author=Joehu et al.
-Version=1.1.2
+Version=v1.2.0
 LoadType=Layout
 Load=uhe Default Layout
 MinimumRainmeter=4.4.0.3380
