--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,7 @@ on:
 jobs:
   package:
     runs-on: windows-latest
-    permissions:
-      contents: read
+    permissions: write-all
     outputs:
       target: ${{ steps.create_rmskin.outputs.target }}
     steps:
