--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   package:
     runs-on: windows-latest
-    permissions: write-all
+    permissions:
+      contents: write
     outputs:
       target: ${{ steps.create_rmskin.outputs.target }}
     steps:
