Remove osu!-related skins
Will be moved to another repo.

--- a/RMSKIN/Layouts/uhe Test Layout/Rainmeter.ini
+++ b/RMSKIN/Layouts/uhe Test Layout/Rainmeter.ini
@@ -1,24 +1,6 @@
 [Rainmeter]
 
-[uhe\Tests\Games\osu!\Recent]
-Active=1
-WindowX=0
-WindowY=204
-ClickThrough=0
-Draggable=1
-SnapEdges=1
-KeepOnScreen=1
-AlwaysOnTop=0
-
-[uhe\Tests\Games\osu!\Usercard]
-Active=1
-WindowX=0
-WindowY=0
-ClickThrough=0
-Draggable=1
-SnapEdges=1
-KeepOnScreen=1
-AlwaysOnTop=0
+; put components to test here
 
 [uhe\CustomTaskbar\TranslucentTaskbar]
 Active=1
