--- a/RMSKIN/Skins/uhe/NowPlaying/Lyrics Display/WLM.ini
+++ b/RMSKIN/Skins/uhe/NowPlaying/Lyrics Display/WLM.ini
@@ -5,7 +5,7 @@
 Author=Joehu
 Version=1.0
 License=MIT License
-Information=Uses WLM to show lyrics of current song playing on osu!.
+Information=Uses WLM to show lyrics of current song playing on apps that use the WLM API.
 
 [measureLyrics]
 PlayerName=WLM
