--- a/RMSKIN/Skins/uhe/Ping/Ping.ini
+++ b/RMSKIN/Skins/uhe/Ping/Ping.ini
@@ -14,7 +14,7 @@ text=Ping
 [measurePing]
 Measure=Plugin
 Plugin=PingPlugin
-DestAddress=osu.ppy.sh
+DestAddress=google.com
 UpdateRate=1
 MinValue=0
 MaxValue=100
