Append `/s` to download/upload skins

--- a/RMSKIN/Skins/uhe/System/Download/Download.ini
+++ b/RMSKIN/Skins/uhe/System/Download/Download.ini
@@ -25,7 +25,7 @@ IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!R
 IfCondition4=(measureDownload > 10240000)
 IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 RegExpSubstitute=1
-Substitute="(.+)":"\1B"
+Substitute="(.+)":"\1B/s"
 
 [meterSide]
 Meter=String
