--- a/RMSKIN/Skins/uhe/System/Upload/Upload.ini
+++ b/RMSKIN/Skins/uhe/System/Upload/Upload.ini
@@ -24,7 +24,7 @@ IfTrueAction3=[!SetOption meterBar BarColor 255,126,0][!UpdateMeter meterBar][!R
 IfCondition4=(measureUpload > 1024000)
 IfTrueAction4=[!SetOption meterBar BarColor 255,0,0][!UpdateMeter meterBar][!Redraw]
 RegExpSubstitute=1
-Substitute="(.+)":"\1B"
+Substitute="(.+)":"\1B/s"
 
 [meterSide]
 Meter=String
