Improve visibility of discord timestamp generator integration in time skin

--- a/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
+++ b/RMSKIN/Skins/uhe/Time/Digital/Digital.ini
@@ -12,7 +12,6 @@ Information=Checks time using digital.
 
 [Variables]
 DropdownHeight=[meterDropdownContent:W]
-InitialTimestampOpened=0
 
 [measureTime]
 Measure=Time
@@ -71,17 +70,22 @@ FontFace=#DisplayFont#
 FontSize=50
 Padding=#PaddingSize#
 Group=TextGroup
-MouseOverAction=#HorizontalExpandCommand#
-MouseLeaveAction=#HorizontalCollapseCommand#
-LeftMouseUpAction=#PlayButtonClick#[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!WriteKeyValue Variables InitialTimestampOpened 1][!SetVariable InitialTimestampOpened 1][!Redraw]
+MouseOverAction=#HorizontalExpandCommand#[!ShowMeter meterDiscordIcon]
+MouseLeaveAction=#HorizontalCollapseCommand#[!HideMeter meterDiscordIcon]
 
-[measureInitialTimestampOpen]
-Measure=Calc
-Formula=#InitialTimestampOpened#
-IfCondition=measureInitialTimestampOpen = 0
-IfTrueAction=[!SetOption meterEdge ToolTipText "click to toggle discord timestamp generator"]
-IfFalseAction=[!SetOption meterEdge ToolTipText ""]
+[meterDiscordIcon]
+Meter=String
+FontFace=#BrandFace#
+Text=[\xf392]
+FontSize=12
+Group=TextGroup
+AntiAlias=1
+Hidden=1
+X=10
+Y=-22R
 DynamicVariables=1
+LeftMouseUpAction=#PlayButtonClick#[!ToggleMeterGroup TimestampGroup][!UpdateMeterGroup TimestampGroup][!Redraw]
+ToolTipText=click to toggle discord timestamp generator
 
 [meterDropdownBackground]
 Meter=Shape
@@ -93,7 +97,7 @@ Shape4=Combine Shape | Union Shape2 | Exclude Shape3
 Gradient=0 | 0,0,0,0 ; 0.0
 DynamicVariables=1
 Group=OpaqueBackgroundGroup
-X=R
+X=[meterEdge:W]
 
 [meterDropdown]
 Meter=Image
